# qr-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  qr_logo.py
