[project]
name = "qr-cli"
version = "0.1.0"
description = "Generate a QR code with a logo embedded in the middle."
requires-python = ">=3.9"
dependencies = [
    "qrcode[pil]>=7.4",
    "pillow>=10.0",
]

[project.scripts]
qr-logo = "qr_logo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["qr_logo.py"]
